# SIO-Insights

./: .env.example  .gitignore  0001DailySIOInsightsrefresh20260718.patch  0002Codifyownerbranchcodeinexplainerminifeedexam.patch  0003RecodifyAOTOandADOownershorthandtoAOandA4.patch  GENERATOR-PROMPT.md  GENERATORPROMPT.md  README.md  TRAWLER-PROMPT.md  TRAWLERPROMPT.md  data.js  explainer.html  index.html  netlify.toml
portfolio-tracker/: .env.example  README.md  pyproject.toml
portfolio-tracker/docs/: backup-restore.md  data-dictionary.md  import-formats.md  metrics.md  security.md  troubleshooting.md
portfolio-tracker/portfolio_inputs/: README.md
portfolio-tracker/portfolio_tracker/: __init__.py  alerts.py  cli.py  core.py  db.py  portfolio.py  reconcile.py  reports.py  scheduler.py  seed.py
portfolio-tracker/portfolio_tracker/calc/: performance.py  positions.py
portfolio-tracker/portfolio_tracker/dashboard/: server.py  svg.py
portfolio-tracker/portfolio_tracker/dashboard/templates/: allocation.html  base.html  holdings.html  income.html  performance.html  quality.html  reconcile.html  risk.html  summary.html  (+1 more)
portfolio-tracker/portfolio_tracker/importers/: base.py  generic_csv.py
portfolio-tracker/portfolio_tracker/marketdata/: base.py  fx.py  service.py  stooq.py
portfolio-tracker/portfolio_tracker/migrations/: 0001_initial.sql
portfolio-tracker/seed/: known_context.json
portfolio-tracker/templates/: transactions_template.csv
portfolio-tracker/tests/: conftest.py  test_costbasis.py  test_importer.py  test_performance.py  test_portfolio.py
(+4 files in other folders)
