[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Secure, local-first personal stock portfolio tracker"
requires-python = ">=3.10"
dependencies = [
    "flask==3.1.3",
    "requests==2.34.2",
    "openpyxl==3.1.5",
    "fpdf2==2.8.7",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[project.scripts]
portfolio = "portfolio_tracker.cli:main"

[tool.setuptools.packages.find]
include = ["portfolio_tracker*"]

[tool.setuptools.package-data]
portfolio_tracker = ["migrations/*.sql", "dashboard/templates/*.html"]
